Updated File Route
- Added Exception handling that will log the exception and send file to error
- Move file to destination only if successful and added message to queue
- Move file to await if waiting for image and did not send message to queue
- Updated tests so that they still worked after changes to the Route

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.activemq.packages.trust-all=true
 
 source.folder=C://Users//markw//Documents//temp//source-folder
 destination.folder=C://Users//markw//Documents//temp//destination-folder
+await.folder=C://Users//markw//Documents//temp//await-folder
+error.folder=C://Users//markw//Documents//temp//error-folder
 source.suffix=.*.json
 
 product-importer.inbox=C://Users//markw//Documents//temp//product-importer-inbox
